Replaced Nvidia logo, added where-we-fit diagram

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <div class="">
                         <p class="highlighted">Tempo runs in your Datalake where your data lives. It can even run as a Snowflake NativeApp. Using Tempo will save you money on your SIEM, by sending incidents, not raw logs, into your SIEM.</p>
 
-                        <img class="content-image" src="img/architecture.png">
+                        <img class="content-image" src="img/where-we-fit.png">
                     </div>
                 </div>
             </section>
