Added Privacy and Docs as PDFs inside root

--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
                 <div class="col-1-of-2">
                     <ul class="footer-nav">
                         <li>&copy; DeepTempo.ai - 2024. All rights reserved.</li>
-                        <li><a href="https://www.skidaway.io/privacy.html">Privacy</a></li>
-                        <li><a href="https://www.skidaway.io/docs">Documentation</a></li>
+                        <li><a href="docs/DeepTempo - Privacy Policy for Snowflake NativeApp.pdf">Privacy</a></li>
+                        <li><a href="docs/Getting Started with TEMPO.pdf">Documentation</a></li>
                     </ul>
                 </div>
                 <div class="col-1-of-2">
