--- a/index.html
+++ b/index.html
@@ -117,33 +117,13 @@
             </section>
 
             <section class="section-book" id="section-contact">
-                <div class="row">
-                    <div class="book">
-                        <div class="book__form">
-                            <form action="#" class="form">
-                                <div class="u-margin-bottom-medium">
-                                    <h2 class="heading-secondary">
-                                        Get in touch!
-                                    </h2>
-                                </div>
-
-                                <div class="form__group">
-                                    <input type="text" class="form__input" placeholder="Full name" id="name" required>
-                                    <label for="name" class="form__label">Full name</label>
-                                </div>
-
-                                <div class="form__group">
-                                    <input type="email" class="form__input" placeholder="Email address" id="email" required>
-                                    <label for="email" class="form__label">Email address</label>
-                                </div>
-
-                                <div class="form__group">
-                                    <button class="btn btn--outline-white">Send</button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
+                <h2 class="medium-text">Stay Updated</h2>
+                <form action="https://formspree.io/YOUREMAIL" method="POST">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
+        
+                    <button type="submit">Submit</button>
+                </form>
             </section>
         </main>
 
