--- a/index.html
+++ b/index.html
@@ -115,15 +115,27 @@
                     </div>
                 </div>
             </section>
-
             <section class="section-book" id="section-contact">
-                <h2 class="medium-text">Stay Updated</h2>
-                <form action="https://formspree.io/YOUREMAIL" method="POST">
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required>
-        
-                    <button type="submit">Submit</button>
-                </form>
+                <div class="row">
+                    <div class="book">
+                        <div class="book__form">
+                            <form action="https://formspree.io/YOUREMAIL" method="POST" class="form">
+                                <div class="u-margin-bottom-medium">
+                                    <h2 class="heading-secondary">
+                                        Stay Updated
+                                    </h2>
+                                </div>
+                                <div class="form__group">
+                                    <input type="email" class="form__input" placeholder="Email address" id="email" name="email" required>
+                                    <label for="email" class="form__label">Email address</label>
+                                </div>
+                                <div class="form__group">
+                                    <button type="submit" class="btn btn--outline-white">Submit</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
             </section>
         </main>
 
