--- a/index.html
+++ b/index.html
@@ -11,11 +11,36 @@
 
         <link rel="stylesheet" href="css/style.css">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+
+        <!-- Add Font Awesome -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         
         <title>DeepTempo | Cybersecurity powered by Deep Learning</title>
     </head>
 
     <body>
+        <header class="navbar">
+            <div class="navbar__logo">
+                <img src="img/logo-full-color.png" alt="DeepTempo Logo">
+            </div>
+            <div class="navbar__toggle" id="mobile-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+            <nav class="navbar__nav" id="navbar-overlay">
+                <ul class="navbar__list">
+                    <li class="navbar__item"><a href="index.html" class="navbar__link active">Home</a></li>
+                    <li class="navbar__item"><a href="product.html" class="navbar__link">Product</a></li>
+                    <li class="navbar__item"><a href="about-us.html" class="navbar__link">About Us</a></li>
+                    <li class="navbar__item"><a href="https://medium.com/deeptempo" target="_blank" class="navbar__link">Blog</a></li>
+                    <li class="navbar__item"><a href="http://docs.deeptempo.ai/" target="_blank" class="navbar__link">Documentation</a></li>
+                    <li class="navbar__item"><a href="contact-us.html" class="navbar__link">Contact Us</a></li>
+                </ul>
+                <div class="navbar__close" id="close-menu">&times;</div>
+            </nav>
+        </header>
+
         <header class="header">
             <div class="header__logo-box">
                 <!-- <img src="img/logo-white.png" alt="Logo" class="header__logo"> -->
@@ -58,7 +83,7 @@
                         <h2 class="heading-secondary">
                             Mission
                         </h2>
-                        <p class="highlighted">DeepTempo returns the power to defenders; we invented and trained a new class of deep learning model, that we call a LogLM (Log Language Model), that, along with our software, is state of the art in identifying security incidents.</p>
+                        <p class="highlighted">DeepTempo returns the power to defenders with a new LogLM (Log Language Model), that, along with our software, identifies security incidents with unparalleled accuracy and efficiency.</p>
                     </div>
                 </div>
             </section>
@@ -74,7 +99,7 @@
                     <div class="">
                         <img class="content-image" src="img/where-we-fit.png">
 
-                        <p class="highlighted">Tempo runs in your Datalake where your data lives. It can even run as a Snowflake NativeApp. Using Tempo will save you money on your SIEM, by sending incidents, not raw logs, into your SIEM.</p>
+                        <p class="highlighted">Tempo runs in your Datalake where your data lives. It can even run as a Snowflake Native App. Using Tempo will save you money on your SIEM, by sending incidents, not raw logs, into your SIEM.</p>
                     </div>
                 </div>
             </section>
@@ -88,7 +113,7 @@
 
                 <div class="row">
                     <div class="">
-                        <p class="highlighted">Our Tempo software and LogLM can run on as little as 1 CPU, depending on the amount of log data to analyze. A free demo is available from the Snowflake Marketplace. Tempo is the first cyber security incident identification solution available as a NativeApp. We also support on-premise deployments and can scale horizontally to PBs of logs analyzed daily, for the largest of environments.</p>
+                        <p class="highlighted">Our Tempo software and LogLM can run on as little as 1 CPU, depending on the amount of log data to analyze. A free demo is available from the Snowflake Marketplace. Tempo is the first cyber security incident identification solution available as a Native App. We also support on-premise deployments and can scale horizontally to PBs of logs analyzed daily, for the largest of environments.</p>
                     </div>
                     <div class="col-1-of-2">
                         <div class="story">
@@ -96,7 +121,7 @@
                             <div class="story__text">
                                 <h3 class="heading-tertiary u-margin-bottom-small">Snowflake Native App</h3>
                                 <p>
-                                    Tempo is the first NativeApp available on Snowflake for cyber security incident identification.  Free trials with demo data can be run in minutes.
+                                    Tempo is the first Native App available on Snowflake for cyber security incident identification.  Free trials with demo data can be run in minutes.
                                 </p>
                             </div>
                         </div>
@@ -108,7 +133,7 @@
                             <div class="story__text">
                                 <h3 class="heading-tertiary u-margin-bottom-small">On-Premise Solution</h3>
                                 <p>
-                                    Tempo efficiently runs on-premise.  Tempo LogLMs can run on a single CPU or GPU and can scale horizontally, running in any Kubernetes-based workload management system.
+                                    Tempo runs efficiently on premises with LogLMs capable of running on a single CPU or GPU and scaling horizontally in any Kubernetes-based workload management system.
                                 </p>
                             </div>
                         </div>
@@ -143,10 +168,18 @@
             <div class="row">
                 <div class="col-1-of-2">
                     <ul class="footer-nav">
-                        <li>&copy; DeepTempo.ai - 2024. All rights reserved.</li>
+                        <li>&copy; Skidaway, Inc. d/b/a DeepTempo. All rights reserved.</li>
                         <li><a href="docs/DeepTempo - Privacy Policy for Snowflake NativeApp.pdf">Privacy</a></li>
                         <li><a href="docs/Getting Started with TEMPO.pdf">Documentation</a></li>
                     </ul>
+                    <div class="footer__social-media">
+                        <a href="https://www.youtube.com/@DeepTempo-ai" target="_blank"><i class="fab fa-youtube"></i></a>
+                        <a href="https://www.linkedin.com/groups/13114314/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.reddit.com/r/DeepTempo/" target="_blank"><i class="fab fa-reddit"></i></a>
+                        <a href="https://medium.com/deeptempo" target="_blank"><i class="fab fa-medium"></i></a>
+                        <!-- <a href="https://www.instagram.com/deep.tempo/" target="_blank"><i class="fab fa-instagram"></i></a> -->
+                        <!-- <a href="https://www.linkedin.com/company/deeptempo/" target="_blank"><i class="fab fa-facebook"></i></a> -->
+                    </div>
                 </div>
                 <div class="col-1-of-2">
                     <picture class="footer__logo">
@@ -158,5 +191,19 @@
                 </div>
             </div>
         </footer>
+
+        <script>
+            const mobileMenu = document.getElementById('mobile-menu');
+            const navbarNav = document.getElementById('navbar-overlay');
+            const closeMenu = document.getElementById('close-menu');
+
+            mobileMenu.addEventListener('click', () => {
+                navbarNav.classList.add('active');
+            });
+
+            closeMenu.addEventListener('click', () => {
+                navbarNav.classList.remove('active');
+            });
+        </script>
     </body>
 </html>
