--- a/contact-us.html
+++ b/contact-us.html
@@ -57,7 +57,7 @@
             </div>
             <div class="contact-form">
                 <h2>Send Us a Message</h2>
-                <form action="https://formspree.io/YOUREMAIL" method="POST">
+                <form action="https://formspree.io/f/xanyjjdp" method="POST">
                     <div class="form-group">
                         <input type="text" name="name" placeholder="Your Name" required>
                     </div>
