--- a/Submitted.html
+++ b/Submitted.html
@@ -41,7 +41,7 @@
             </nav>
         </header>
 
-        <section class="hero-section">
+        <section class="heading-secondary">
             <p>Thank you for sumitting</p>
         </section>
     
