--- a/Submitted.html
+++ b/Submitted.html
@@ -42,7 +42,9 @@
         </header>
 
         <section class="heading-secondary">
-            <p>Thank you for sumitting</p>
+            <div class="u-center-text">
+                <p>Thank you for sumitting</p>
+            </div>
         </section>
     
         <!-- <section class="cta-section">
