--- a/Submitted.html
+++ b/Submitted.html
@@ -40,13 +40,13 @@
                 <div class="navbar__close" id="close-menu">&times;</div>
             </nav>
         </header>
-
-        <div class="u-center-text">
-            <section class="heading-secondary">
-                    <p>Thank you for sumitting</p>
-            </section>
-         </div>
-    
+        <section class="hero-section">
+            <div class="u-center-text">
+                <section class="heading-secondary">
+                        <p>Thank you for sumitting</p>
+                </section>
+             </div>
+        </section>
         <!-- <section class="cta-section">
             <button class="cta-button">Join Us</button>
         </section> -->
