--- a/Submitted.html
+++ b/Submitted.html
@@ -43,7 +43,7 @@
         <section class="hero-section">
             <div class="u-center-text">
                 <section class="heading-secondary">
-                        <p>Thank you for sumitting</p>
+                        <p>Email received. Thank you!!!</p>
                 </section>
              </div>
         </section>
