--- a/Submitted.html
+++ b/Submitted.html
@@ -42,7 +42,7 @@
         </header>
         <section class="hero-section">
             <div class="u-center-text">
-                <section class="heading-secondary">
+                <section class="hero-title">
                         <p>Email received. Thank you!!!</p>
                 </section>
              </div>
