--- a/Submitted.html
+++ b/Submitted.html
@@ -17,6 +17,15 @@
         
         <title>DeepTempo | Cybersecurity powered by Deep Learning</title>
     </head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9EGVJW1TZT"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-9EGVJW1TZT');
+    </script>
 
     <body>
         <header class="navbar">
