--- a/defense_in_depth_4.html
+++ b/defense_in_depth_4.html
@@ -176,6 +176,17 @@
     </style>
 </head>
 
+    
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9EGVJW1TZT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9EGVJW1TZT');
+</script>
+
 <body>
     <div class="container" id="container">
         <!-- Points will appear in this container -->
