--- a/template.html
+++ b/template.html
@@ -15,6 +15,17 @@
         <title>DeepTempo | Cybersecurity powered by Deep Learning</title>
     </head>
 
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9EGVJW1TZT"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-9EGVJW1TZT');
+    </script>
+
     <body>
         <header class="navbar">
             <div class="navbar__logo">
