--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <div class="row">
                     <div class="book">
                         <div class="book__form">
-                            <form action="https://formspree.io/YOUREMAIL" method="POST" class="form">
+                            <form action="https://formspree.io/f/xvgorvbl" method="POST" class="form">
                                 <div class="u-margin-bottom-medium">
                                     <h2 class="heading-secondary">
                                         Stay Updated
