Added News section, certification logos, replaced About Us image with a free stock photo

--- a/thanks.html
+++ b/thanks.html
@@ -64,6 +64,10 @@
                         <!-- <a href="https://www.instagram.com/deep.tempo/" target="_blank"><i class="fab fa-instagram"></i></a> -->
                         <!-- <a href="https://www.linkedin.com/company/deeptempo/" target="_blank"><i class="fab fa-facebook"></i></a> -->
                     </div>
+                    <div class="footer__certifications">
+                        <img src="img/native-app-accelerator-badge.png" alt="Native App Accelerator Badge" class="footer-cert-logo">
+                        <img src="img/nvidia-inception-program-badge.png" alt="Nvidia Inception Program Badge" class="footer-cert-logo">
+                    </div>
                 </div>
                 <div class="col-1-of-2">
                     <picture class="footer__logo">
