--- a/template.html
+++ b/template.html
@@ -26,6 +26,10 @@
       gtag('config', 'G-9EGVJW1TZT');
     </script>
 
+    <!-- Start of HubSpot Embed Code -->
+    <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/48299015.js"></script>
+    <!-- End of HubSpot Embed Code -->
+    
     <body>
         <header class="navbar">
             <div class="navbar__logo">
