--- a/snowflake.html
+++ b/snowflake.html
@@ -1,228 +1,279 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>DeepTempo + Snowflake</title>
+  
+  <!-- Fonts & CSS from your main site -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="shortcut icon" type="image/png" href="img/favicon.png">
 
-    <!-- Same Fonts as index.html -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
+  <!-- Font Awesome (same as index) -->
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+  >
 
-    <!-- Same main stylesheet -->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+  <!-- Google Analytics / Tag -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9EGVJW1TZT"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-9EGVJW1TZT');
+  </script>
 
-    <!-- Font Awesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    >
+  <!-- HubSpot Tracking -->
+  <script
+    type="text/javascript"
+    id="hs-script-loader"
+    async
+    defer
+    src="//js.hs-scripts.com/48299015.js"
+  ></script>
 
-    <title>DeepTempo + Snowflake</title>
+  <!-- Optional inline CSS to demonstrate the split hero -->
+  <style>
+    /* Split hero container */
+    .hero-split {
+      display: flex;
+      width: 100%;
+      min-height: 60vh; /* Adjust as needed */
+    }
+    /* Left side: DeepTempo colors (example: black background w/ red accent) */
+    .hero-left {
+      flex: 1;
+      background: #000; /* or a gradient if desired */
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 3rem 2rem;
+      text-align: center;
+    }
+    /* Right side: Snowflake color (light or brand color) */
+    .hero-right {
+      flex: 1;
+      background: #29B5E8; /* Snowflake-like brand color */
+      /* Or consider using a background image from Snowflake’s site, 
+         but be mindful of usage rights. */
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 3rem 2rem;
+    }
+    /* Headline & tagline styles */
+    .hero-left h1 {
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+    }
+    .hero-tagline {
+      font-size: 1.25rem;
+      color: #fff;
+      margin-bottom: 0;
+      max-width: 480px;
+      line-height: 1.4;
+    }
 
-    <!-- Google Tag Manager / Analytics (same as index.html) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9EGVJW1TZT"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-    
-      gtag('config', 'G-9EGVJW1TZT');
-    </script>
+    /* Larger, centered video section */
+    .video-section {
+      text-align: center;
+      padding: 4rem 2rem;
+      background-color: #f9f9f9; /* or keep it white */
+    }
+    .video-section h2 {
+      margin-bottom: 2rem;
+    }
+    .video-wrapper {
+      max-width: 800px; 
+      margin: 0 auto; 
+      position: relative;
+      padding-bottom: 56.25%; /* 16:9 ratio */
+      height: 0;
+    }
+    .video-wrapper iframe {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      left: 0;
+      top: 0;
+    }
+  </style>
+</head>
 
-    <!-- HubSpot Tracking Code (same as index.html) -->
-    <script
-      type="text/javascript"
-      id="hs-script-loader"
-      async
-      defer
-      src="//js.hs-scripts.com/48299015.js"
-    ></script>
-  </head>
+<body>
+  <!-- NAVBAR (same structure as index.html) -->
+  <header class="navbar">
+    <div class="navbar__logo">
+      <img src="img/logo-full-color.png" alt="DeepTempo Logo">
+    </div>
+    <div class="navbar__toggle" id="mobile-menu">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </div>
+    <nav class="navbar__nav" id="navbar-overlay">
+      <ul class="navbar__list">
+        <li class="navbar__item"><a href="index.html" class="navbar__link">Home</a></li>
+        <li class="navbar__item"><a href="product.html" class="navbar__link">Product</a></li>
+        <li class="navbar__item"><a href="about-us.html" class="navbar__link">About Us</a></li>
+        <li class="navbar__item"><a href="snowflake.html" class="navbar__link active">Snowflake</a></li>
+        <li class="navbar__item"><a href="contact-us.html" class="navbar__link">Contact Us</a></li>
+      </ul>
+      <div class="navbar__close" id="close-menu">&times;</div>
+    </nav>
+  </header>
 
-  <body>
-    <!-- HEADER / NAV -->
-    <header class="navbar">
-      <div class="navbar__logo">
-        <img src="img/logo-full-color.png" alt="DeepTempo Logo">
-      </div>
-      <div class="navbar__toggle" id="mobile-menu">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-      </div>
-      <nav class="navbar__nav" id="navbar-overlay">
-        <ul class="navbar__list">
-          <!-- You can keep or remove links as desired; here we add a "Snowflake" link -->
-          <li class="navbar__item"><a href="index.html" class="navbar__link">Home</a></li>
-          <li class="navbar__item"><a href="product.html" class="navbar__link">Product</a></li>
-          <li class="navbar__item"><a href="about-us.html" class="navbar__link">About Us</a></li>
-          <li class="navbar__item"><a href="snowflake.html" class="navbar__link active">Snowflake</a></li>
-          <li class="navbar__item"><a href="contact-us.html" class="navbar__link">Contact Us</a></li>
+  <!-- SPLIT HERO SECTION -->
+  <section class="hero-split">
+    <!-- LEFT (DeepTempo) -->
+    <div class="hero-left">
+      <h1>DeepTempo + Snowflake</h1>
+      <p class="hero-tagline">
+        Superior cyber security available now from the Snowflake NativeApp marketplace
+      </p>
+    </div>
+
+    <!-- RIGHT (Snowflake brand color or image) -->
+    <div class="hero-right">
+      <!-- Optionally place a Snowflake or co-branded graphic/logo here -->
+      <!-- For now, it's just a color background -->
+    </div>
+  </section>
+
+  <!-- VIDEO SECTION -->
+  <section class="video-section">
+    <h2>See Our Integration in Action</h2>
+    <div class="video-wrapper">
+      <!-- Larger, centered video embed -->
+      <iframe
+        src="https://www.youtube.com/embed/meaxmFGyep4?si=RmIJuR1Mm9K2tUEQ"
+        frameborder="0"
+        allowfullscreen
+      ></iframe>
+    </div>
+  </section>
+
+  <!-- JOINT VALUE PROPOSITION -->
+  <section class="section-about">
+    <div class="u-center-text u-margin-bottom-big">
+      <h2 class="heading-secondary">Joint Value Proposition</h2>
+    </div>
+    <div class="row">
+      <div class="col-1-of-1">
+        <p class="paragraph">
+          By combining DeepTempo’s advanced deep learning LogLM with Snowflake’s secure, scalable data platform, 
+          organizations can dramatically improve <strong>threat detection accuracy</strong>, 
+          reduce <strong>SIEM costs</strong>, and identify security incidents with <strong>relevant context</strong>. 
+          You’ll:
+        </p>
+        <ul class="paragraph">
+          <li>Save on ingestion costs by filtering noise before sending to your SIEM.</li>
+          <li>Improve accuracy with advanced deep learning across massive datasets.</li>
+          <li>Identify high-priority incidents plus the contextual data you need to respond.</li>
+          <li>Leverage Snowflake’s NativeApp marketplace for quick deployment.</li>
         </ul>
-        <div class="navbar__close" id="close-menu">&times;</div>
-      </nav>
-    </header>
-
-    <!-- HERO / HEADER SECTION -->
-    <header class="header">
-      <div class="header__text-box">
-        <h1 class="heading-primary">
-          <span class="heading-primary--main">
-            <img alt="Full logo" src="img/logo-full-color.png">
-          </span>
-          <span class="heading-primary--sub">DeepTempo + Snowflake</span>
-        </h1>
-        <a href="#section-video" class="btn btn--outline-white btn--animated">
-          Watch the Video
-        </a>
       </div>
-    </header>
+    </div>
+  </section>
 
-    <main>
-      <!-- JOINT VALUE PROPOSITION SECTION -->
-      <section class="section-about">
-        <div class="u-center-text u-margin-bottom-big">
-          <h2 class="heading-secondary">
-            Our Joint Value Proposition
-          </h2>
-        </div>
-
-        <div class="row">
-          <!-- Customize the text here to describe your partnership’s benefits -->
-          <div class="col-1-of-1">
-            <p class="paragraph">
-              DeepTempo’s partnership with Snowflake revolutionizes how security teams gain insights from large volumes of log data. By leveraging Snowflake’s secure, scalable data platform and DeepTempo’s advanced deep learning model, customers can:
-            </p>
-            <ul class="paragraph">
-              <li>Process massive data sets efficiently</li>
-              <li>Detect threats with state-of-the-art ML accuracy</li>
-              <li>Reduce SIEM costs by filtering noise before ingestion</li>
-              <li>Deploy easily as a Snowflake Native App or on-premise</li>
-            </ul>
-          </div>
-        </div>
-      </section>
-
-      <!-- VIDEO SECTION -->
-      <section class="section-about" id="section-video">
-        <div class="u-center-text u-margin-bottom-big">
-          <h2 class="heading-secondary">
-            Watch Our Snowflake Partnership Video
-          </h2>
-        </div>
-
-        <div class="row">
-          <div class="col-1-of-2">
-            <!-- Embed your YouTube video here -->
-            <div class="video-container">
-              <iframe width="560" height="315"
-                src="https://www.youtube.com/embed/meaxmFGyep4?si=RmIJuR1Mm9K2tUEQ"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen>
-              </iframe>
-            </div>
+  <!-- HUBSPOT FORM SECTION -->
+  <section class="section-book">
+    <div class="row">
+      <div class="book">
+        <div class="book__form">
+          <div class="u-margin-bottom-medium">
+            <h2 class="heading-secondary">
+              Register Now for a Free Snowflake Trial
+            </h2>
           </div>
 
-          <div class="col-1-of-2">
-            <p class="paragraph">
-              In this short video, you’ll see how DeepTempo’s cutting-edge deep learning techniques 
-              integrate with Snowflake’s Data Cloud to deliver next-level cybersecurity capabilities. 
-              We provide unparalleled threat detection and reduce alert fatigue so your team can 
-              focus on real threats.
-            </p>
-          </div>
-        </div>
-      </section>
+          <!-- HubSpot Form Embed -->
+          <!-- 1) Create/Modify your form in HubSpot to include:
+                 - Email field
+                 - Checkbox: "Schedule a time to meet with DeepTempo"
+                 2) Copy the embed code below and replace with YOUR actual Portal ID & Form ID -->
 
-      <!-- OPTIONAL: EMBED A HUBSPOT FORM OR CONTACT SECTION HERE -->
-      <section class="section-book">
-        <div class="row">
-          <div class="book">
-            <div class="book__form">
-              <!-- Example: Formspree or your HubSpot embed code -->
-              <form action="https://formspree.io/f/xvgorvbl" method="POST" class="form">
-                <div class="u-margin-bottom-medium">
-                  <h2 class="heading-secondary">
-                    Learn More
-                  </h2>
-                </div>
-                <div class="form__group">
-                  <input type="email" class="form__input" placeholder="Email address" id="email" name="email" required>
-                  <label for="email" class="form__label">Email address</label>
-                </div>
-                <div class="form__group">
-                  <button type="submit" class="btn btn--outline-white">Submit</button>
-                </div>
-              </form>
-              
-              <!-- If using HubSpot forms, replace the above form with your HubSpot embed snippet:
-              <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
-              <script>
-                hbspt.forms.create({
-                  region: "na1",
-                  portalId: "48299015",
-                  formId: "YOUR_FORM_ID",
-                  target: "#hs-form"
-                });
-              </script>
-              <div id="hs-form"></div>
-              -->
-            </div>
-          </div>
-        </div>
-      </section>
-    </main>
+          <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
+          <script>
+            hbspt.forms.create({
+              region: "na1",
+              portalId: "YOUR_PORTAL_ID",     // e.g., "48299015"
+              formId: "YOUR_FORM_ID",        // e.g., "abcd1234-ab12-cd34-ef56-1234567890ab"
+              target: "#hubspot-form-container",
+              css: '', // Optional: If you want to override form styles, you can put your CSS here or leave it empty to use HubSpot defaults.
+              onFormReady: function($form){
+                // OPTIONAL: If you want to do additional DOM manipulation
+                // For example, you could reference the checkbox field by name or ID
+                // and add custom text. However, it's usually easiest to configure
+                // the form fields directly in HubSpot.
+              }
+            });
+          </script>
+          <div id="hubspot-form-container"></div>
 
-    <!-- FOOTER (same as index.html) -->
-    <footer class="footer">
-      <div class="row">
-        <div class="col-1-of-2">
-          <ul class="footer-nav">
-            <li>&copy; Skidaway, Inc. d/b/a DeepTempo. All rights reserved.</li>
-            <li><a href="docs/DeepTempo - Privacy Policy for Snowflake NativeApp.pdf">Privacy</a></li>
-            <li><a href="docs/Getting Started with TEMPO.pdf">Documentation</a></li>
-          </ul>
-          <div class="footer__social-media">
-            <a href="https://www.youtube.com/@DeepTempo-ai" target="_blank"><i class="fab fa-youtube"></i></a>
-            <a href="https://www.linkedin.com/groups/13114314/" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://www.reddit.com/r/DeepTempo/" target="_blank"><i class="fab fa-reddit"></i></a>
-            <a href="https://medium.com/deeptempo" target="_blank"><i class="fab fa-medium"></i></a>
-          </div>
-          <div class="footer__certifications">
-            <img src="img/native-app-accelerator-badge.png" alt="Native App Accelerator Badge" class="footer-cert-logo">
-            <img src="img/nvidia-inception-program-badge.png" alt="Nvidia Inception Program Badge" class="footer-cert-logo">
-          </div>
-        </div>
-        <div class="col-1-of-2">
-          <picture class="footer__logo">
-            <img alt="Full logo" src="img/logo-full-color.png">
-          </picture>
-          <p class="footer__copyright">
-            DeepTempo was built by a team of deep learning engineers...
-            <!-- (Add or shorten text as needed) -->
-          </p>
+          <!-- If you want to A/B test the checkbox, you can create two forms in HubSpot:
+               - One with the checkbox
+               - One without
+               Then use a simple randomization or your own logic
+               to embed one form or the other here.
+           -->
         </div>
       </div>
-    </footer>
+    </div>
+  </section>
 
-    <!-- SCRIPTS (Same mobile menu JS as index.html) -->
-    <script>
-      const mobileMenu = document.getElementById('mobile-menu');
-      const navbarNav = document.getElementById('navbar-overlay');
-      const closeMenu = document.getElementById('close-menu');
+  <!-- FOOTER (same as index.html) -->
+  <footer class="footer">
+    <div class="row">
+      <div class="col-1-of-2">
+        <ul class="footer-nav">
+          <li>&copy; Skidaway, Inc. d/b/a DeepTempo. All rights reserved.</li>
+          <li><a href="docs/DeepTempo - Privacy Policy for Snowflake NativeApp.pdf">Privacy</a></li>
+          <li><a href="docs/Getting Started with TEMPO.pdf">Documentation</a></li>
+        </ul>
+        <div class="footer__social-media">
+          <a href="https://www.youtube.com/@DeepTempo-ai" target="_blank"><i class="fab fa-youtube"></i></a>
+          <a href="https://www.linkedin.com/groups/13114314/" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="https://www.reddit.com/r/DeepTempo/" target="_blank"><i class="fab fa-reddit"></i></a>
+          <a href="https://medium.com/deeptempo" target="_blank"><i class="fab fa-medium"></i></a>
+        </div>
+        <div class="footer__certifications">
+          <img src="img/native-app-accelerator-badge.png" alt="Native App Accelerator Badge" class="footer-cert-logo">
+          <img src="img/nvidia-inception-program-badge.png" alt="Nvidia Inception Program Badge" class="footer-cert-logo">
+        </div>
+      </div>
+      <div class="col-1-of-2">
+        <picture class="footer__logo">
+          <img alt="Full logo" src="img/logo-full-color.png">
+        </picture>
+        <p class="footer__copyright">
+          DeepTempo was built by a team of deep learning engineers...
+        </p>
+      </div>
+    </div>
+  </footer>
 
-      mobileMenu.addEventListener('click', () => {
-        navbarNav.classList.add('active');
-      });
+  <!-- MOBILE MENU SCRIPT (same as index.html) -->
+  <script>
+    const mobileMenu = document.getElementById('mobile-menu');
+    const navbarNav = document.getElementById('navbar-overlay');
+    const closeMenu = document.getElementById('close-menu');
 
-      closeMenu.addEventListener('click', () => {
-        navbarNav.classList.remove('active');
-      });
-    </script>
-  </body>
+    mobileMenu.addEventListener('click', () => {
+      navbarNav.classList.add('active');
+    });
+
+    closeMenu.addEventListener('click', () => {
+      navbarNav.classList.remove('active');
+    });
+  </script>
+</body>
 </html>
+
