--- a/snowflake.html
+++ b/snowflake.html
@@ -207,7 +207,9 @@
           src="img/snow-logo-white-example.svg"
           alt="Snowflake Logo"
           class="hero-logo"
+          style="height:80px; width:auto;"
         >
+
       </div>
       <p class="hero-tagline">
         Superior cyber security available now from the Snowflake NativeApp marketplace
