--- a/snowflake.html
+++ b/snowflake.html
@@ -207,12 +207,12 @@
           src="img/snow-logo-white-example.svg"
           alt="Snowflake Logo"
           class="hero-logo"
-          style="height:100px; width:auto;"
+          style="height:120px; width:auto;"
         >
 
       </div>
       <p class="hero-tagline">
-        Superior cyber security available now from the Snowflake NativeApp marketplace
+        Superior Cybersecurity available now from the Snowflake NativeApp marketplace
       </p>
     </div>
   </section>
