--- a/snowflake.html
+++ b/snowflake.html
@@ -78,7 +78,7 @@
 
     /* TAGLINE */
     .hero-tagline {
-      font-size: 2rem; /* increased from 1.5rem */
+      font-size: 3rem; /* increased from 1.5rem */
       line-height: 1.4;
       margin-bottom: 2rem;
       font-weight: 600;
@@ -212,7 +212,7 @@
 
       </div>
       <p class="hero-tagline">
-        Superior Cybersecurity available now from the Snowflake NativeApp marketplace
+        DeepLearning-based Cybersecurity now on the Snowflake NativeApp marketplace
       </p>
     </div>
   </section>
@@ -286,15 +286,14 @@
         </h2>
       </div>
       <!-- HubSpot Form Embed (Replace with your actual Portal/Form IDs) -->
-      <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
+      <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/embed/v2.js"></script>
       <script>
         hbspt.forms.create({
-          region: "na1",
-          portalId: "YOUR_PORTAL_ID",
-          formId: "YOUR_FORM_ID",
-          target: "#hubspot-form-container"
+          portalId: "48299015",
+          formId: "d9827af1-9ebb-445b-b19b-87bb6ce6cfe4"
         });
       </script>
+  
       <div id="hubspot-form-container"></div>
     </div>
   </section>
